[✅] fixed square spacing

--- a/style.css
+++ b/style.css
@@ -504,70 +504,70 @@ a{
   width: 20px;
   background-color: #ebe8d3;
   display: inline-block;
-  margin-left: 0.65%;
+  margin-left: 0.6%;
 }
 .square3{
   height: 20px;
   width: 20px;
   background-color: #f0eac0;
   display: inline-block;
-  margin-left: 0.65%;
+  margin-left: 0.6%;
 }
 .square4{
   height: 20px;
   width: 20px;
   background-color: #f3ecac;
   display: inline-block;
-  margin-left: 0.55%;
+  margin-left: 0.6%;
 }
 .square5{
   height: 20px;
   width: 20px;
   background-color: #f6ee98;
   display: inline-block;
-  margin-left: 0.55%;
+  margin-left: 0.6%;
 }
 .square6{
   height: 20px;
   width: 20px;
   background-color: #f8f083;
   display: inline-block;
-  margin-left: 0.55%;
+  margin-left: 0.6%;
 }
 .square7{
   height: 20px;
   width: 20px;
   background-color: #ffcd74;
   display: inline-block;
-  margin-left: 0.65%;
+  margin-left: 0.6%;
 }
 .square8{
   height: 20px;
   width: 20px;
   background-color: #ffa884;
   display: inline-block;
-  margin-left: 0.55%;
+  margin-left: 0.6%;
 }
 .square9{
   height: 20px;
   width: 20px;
   background-color: #ff89a8;
   display: inline-block;
-  margin-left: 0.65%;
+  margin-left: 0.6%;
 }
 .square10{
   height: 20px;
   width: 20px;
   background-color: #ff7cd4;
   display: inline-block;
-  margin-left: 0.65%;
+  margin-left: 0.6%;
 }
 .square11{
   height: 20px;
   width: 20px;
   background-color: #ba83f8;
   display: inline-block;
-  margin-left: 0.58%;
+  margin-left: 0.6%;
 }
 
 /* -------------------------bottom shapes----------------------------- */
